[gd_scene load_steps=26 format=3 uid="uid://dmurky4qj1xnm"]

[ext_resource type="Script" uid="uid://cf6vfql8wtx0y" path="res://player.gd" id="1_glv2v"]
[ext_resource type="Script" uid="uid://b3bg8isg18qtr" path="res://main.gd" id="1_r0du0"]
[ext_resource type="PackedScene" uid="uid://yhw0f86ycyyx" path="res://Boss.tscn" id="3_r0du0"]

[sub_resource type="PlaneMesh" id="PlaneMesh_rxg2q"]
size = Vector2(20, 20)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_glv2v"]

[sub_resource type="BoxShape3D" id="BoxShape3D_trn2v"]
size = Vector3(20, 10, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_3dxm6"]
size = Vector3(20, 9.975, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_lgr22"]
size = Vector3(20, 10, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_fos0i"]
size = Vector3(0.2, 10, 20)

[sub_resource type="BoxMesh" id="BoxMesh_cm0pq"]
size = Vector3(0.2, 10, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_3dxm6"]
size = Vector3(0.2, 10, 20)

[sub_resource type="BoxMesh" id="BoxMesh_fos0i"]
size = Vector3(0.2, 2, 20)

[sub_resource type="Environment" id="Environment_uu6xs"]
background_mode = 1
background_color = Color(0.4, 0.4, 0.4, 1)

[sub_resource type="BoxMesh" id="BoxMesh_r0du0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r0du0"]
albedo_color = Color(0.19853029, 0.52776414, 0.5652041, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_cm0pq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_r0du0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_03owx"]
size = Vector3(1.2, 0.8, 1.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wkp8b"]
albedo_color = Color(0.4506483, 0.4506483, 0.45064825, 1)

[sub_resource type="BoxMesh" id="BoxMesh_20pc6"]
material = SubResource("StandardMaterial3D_wkp8b")
size = Vector3(2, 0.8, 1.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_5vvyt"]
size = Vector3(1.2, 0.8, 2)

[sub_resource type="BoxMesh" id="BoxMesh_c6i3y"]
material = SubResource("StandardMaterial3D_wkp8b")
size = Vector3(1.2, 0.8, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_c2ibq"]
size = Vector3(0.6, 0.8, 0.6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j4qnp"]

[sub_resource type="BoxMesh" id="BoxMesh_fpfj3"]
material = SubResource("StandardMaterial3D_j4qnp")
size = Vector3(0.6, 0.8, 0.6)

[node name="Main" type="Node3D"]
script = ExtResource("1_r0du0")

[node name="Floor" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("PlaneMesh_rxg2q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("WorldBoundaryShape3D_glv2v")

[node name="Wall_North" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall_North"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -10)
shape = SubResource("BoxShape3D_trn2v")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall_North"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -10)
mesh = SubResource("BoxMesh_3dxm6")

[node name="Wall_South" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall_South"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 10)
shape = SubResource("BoxShape3D_lgr22")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall_South"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 10)
mesh = SubResource("BoxMesh_3dxm6")

[node name="Wall_East" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall_East"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 5, 0)
shape = SubResource("BoxShape3D_fos0i")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall_East"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 5, 0)
mesh = SubResource("BoxMesh_cm0pq")

[node name="Wall_West" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall_West"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 5, 0)
shape = SubResource("BoxShape3D_3dxm6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall_West"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 1, 0)
mesh = SubResource("BoxMesh_fos0i")

[node name="SunLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.70710677, -0.49999997, 0.49999997, 0, 0.70710677, 0.70710677, -0.70710677, -0.49999997, 0.49999997, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_uu6xs")

[node name="Player" type="CharacterBody3D" parent="." groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("1_glv2v")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
mesh = SubResource("BoxMesh_r0du0")
surface_material_override/0 = SubResource("StandardMaterial3D_r0du0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("BoxShape3D_cm0pq")

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 0.9659258, 0.25881904, 0, -0.25881904, 0.9659258, 0, 1.5, 3)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 68.0
offset_bottom = 43.0
text = "ゴミ：0"

[node name="TimerLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 984.0
offset_top = 20.0
offset_right = 1090.0
offset_bottom = 43.0
grow_horizontal = 0
text = "定時まで：30.0"

[node name="ResultUI" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/ResultUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.627451)

[node name="ResultLabel" type="Label" parent="CanvasLayer/ResultUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ResultUI"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 500.0
offset_right = 150.0
offset_bottom = 582.0
grow_horizontal = 2
theme_override_constants/separation = 16

[node name="RetryButton" type="Button" parent="CanvasLayer/ResultUI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "まだ働く"

[node name="TitleButton" type="Button" parent="CanvasLayer/ResultUI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "帰宅する"

[node name="Boss" parent="." instance=ExtResource("3_r0du0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.6883764, 0, -9.088512)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Boss"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_r0du0")

[node name="Desk1" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Desk1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.4, 1.2)
shape = SubResource("BoxShape3D_03owx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Desk1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.4, 1.2)
mesh = SubResource("BoxMesh_20pc6")

[node name="Desk2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.153175, 0, -7.914186)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Desk2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.4, 1.2)
shape = SubResource("BoxShape3D_03owx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Desk2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.4, 1.2)
mesh = SubResource("BoxMesh_20pc6")

[node name="Desk3" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.9181666, 0, -2.0339108)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Desk3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.4, 1.2)
shape = SubResource("BoxShape3D_5vvyt")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Desk3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.4, 1.2)
mesh = SubResource("BoxMesh_c6i3y")

[node name="Chair1" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Chair1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 5)
shape = SubResource("BoxShape3D_c2ibq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Chair1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 5)
mesh = SubResource("BoxMesh_fpfj3")

[node name="Chair2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.3502035, 0, -5.7446594)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Chair2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 5)
shape = SubResource("BoxShape3D_c2ibq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Chair2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 5)
mesh = SubResource("BoxMesh_fpfj3")
